--- a/style.css
+++ b/style.css
@@ -13,11 +13,13 @@ body{
     align-items: center;
     margin-bottom: 3rem ;
     overflow-x: hidden;
-    font: 1em sans-serif;
+    font-family: sans-serif;
 }
 .login-page{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .icon1{
     width: 375px;
@@ -29,11 +31,12 @@ body{
 .main{
     display: flex;
     flex-direction: column;
-    margin-top: 1.5rem;
-    gap: 2rem;
+    margin-top: 3rem;
+    gap: 3.5rem;
+    font-size: 1rem;
 }
 .main-head{
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: bold;
     
 }
@@ -45,17 +48,19 @@ body{
 form{
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+    gap: 2.5rem;
 }
 label{
     display: flex;
-    gap: 6rem;
+    gap: 5rem;
     font-weight: bold;
 }
 #lp1{
     display: none;
     color: red;
-    font-size: 1;
+    font-size: 1rem;
     font-weight: 100;
 }
 
@@ -73,6 +78,8 @@ button{
     border: 2px;
     background-color: rgb(50, 50, 73);
     color: white;
+    display: flex;
+    place-content: center;
 }
 button:hover,
 button:focus{
@@ -99,23 +106,96 @@ button:focus{
 .sub-content .sub-p1{
     font-size: 3rem;
 }
+.sub-content .sub-p2{
+    font-size: 1.3rem;
+}
+.sub-content .sub-p2 span{
+    font-size: 1.3rem;
+    color:rgb(243, 39, 56);
+}
 /* .error{
     display: none ;
     color: red;
     margin-top: 0.5rem;
     
 } */
+
+
+@media (max-width:320px) {
+    body{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 2.5rem ;
+        overflow-x: hidden;
+        font-family: sans-serif;
+    }
+    .login-page{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .icon1{
+        width: 320px;
+
+    }
+    .main{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 3rem;
+        gap: 3.5rem;
+        font-size: 0.9rem;
+    }
+    .main-head{
+        font-size: 2.2rem;
+        font-weight: bold;
+        
+    }
+    .main-update{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+    form{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 2.5rem;
+    }
+    input{
+        width: 300px;
+        padding: 1.3rem;
+        border-radius: 0.5rem;
+        margin-top: 0.1rem;
+        border: 0.1px solid grey;
+    }
+    button{
+        width: 300px;
+        padding: 1.3rem;
+        border-radius: 0.5rem;
+        border: 2px;
+        background-color: rgb(50, 50, 73);
+        color: white;
+    }
+}
 @media (min-width:768px) {
     body{
         display: flex;
         justify-content: center;
         align-items: left;
         min-height: 100vh; 
-        background-color: rgb(87, 87, 87); 
+        background-color: rgb(156, 156, 156); 
     }
     .login-page{
         display: flex;
         flex-direction: row-reverse;
+        justify-content: center;
+        align-items: center;
         gap: 3rem;
         background-color: white;
         padding: 1.5rem;
@@ -134,6 +214,21 @@ button:focus{
         margin-top: 1.5rem;
         gap: 1rem;
         font-size: 14px;
+    }
+    input{
+        width: 350px;
+        padding: 1.3rem;
+        border-radius: 0.5rem;
+        margin-top: 0.1rem;
+        border: 0.1px solid grey;
+    }
+    button{
+        width: 350px;
+        padding: 1.3rem;
+        border-radius: 0.5rem;
+        border: 2px;
+        background-color: rgb(50, 50, 73);
+        color: white;
     }
     .sub-success{
         display: flex;
@@ -154,5 +249,11 @@ button:focus{
     .sub-content .sub-p1{
         font-size: 3rem;
         font-weight: bolder;
+    }
+    .sub-content .sub-p2{
+        font-size: 1rem;
+    }
+    .sub-content .sub-p2 span{
+        font-size: 1rem;
     }
 }
